--- a/.github/workflows/ally_test.yml
+++ b/.github/workflows/ally_test.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   openliberty-api:
     runs-on: ubuntu-latest
+    container: cypress/included:13.9.0
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -24,7 +25,7 @@ jobs:
         if: failure()
         with:
             name: cypress-videos
-            path: /__w/Ally-docs/Ally-docs/cypress-docs/cypress/videos/ol_api.cy.js
+            path: /__w/Ally-docs/Ally-docs/cypress-docs/cypress/videos/ol_api.cy.js.mp4
   # trial:
   #   runs-on: ubuntu-latest
   #   container: cypress/included:12.5.1
