--- a/.github/workflows/ally_test.yml
+++ b/.github/workflows/ally_test.yml
@@ -15,17 +15,17 @@ jobs:
         uses: actions/checkout@v3
       - name: Run first test file
         run: cypress run --browser chrome --env JDK_VERSION="1.8.0_311" --config-file /__w/Ally-docs/Ally-docs/cypress-docs/cypress.config.js --spec "/__w/Ally-docs/Ally-docs/cypress-docs/cypress/e2e/ol_api.cy.js"
-      - uses: actions/upload-artifact@v3
-        if: failure()
-        with:
-            name: cypress-screenshots
-            path: /__w/Ally-docs/Ally-docs/cypress-docs/cypress/screenshots/ol_api.cy.js
+      # - uses: actions/upload-artifact@v3
+      #   if: failure()
+      #   with:
+      #       name: cypress-screenshots
+      #       path: /__w/Ally-docs/Ally-docs/cypress-docs/cypress/screenshots/ol_api.cy.js
       
-      - uses: actions/upload-artifact@v3
-        if: failure()
-        with:
-            name: cypress-videos
-            path: /__w/Ally-docs/Ally-docs/cypress-docs/cypress/videos/ol_api.cy.js.mp4
+      # - uses: actions/upload-artifact@v3
+      #   if: failure()
+      #   with:
+      #       name: cypress-videos
+      #       path: /__w/Ally-docs/Ally-docs/cypress-docs/cypress/videos/ol_api.cy.js.mp4
   # trial:
   #   runs-on: ubuntu-latest
   #   container: cypress/included:12.5.1
