Changed reports only to violations

--- a/cypress-docs/.achecker.yml
+++ b/cypress-docs/.achecker.yml
@@ -6,10 +6,10 @@ failLevels:
   - potentialviolation
 reportLevels:
   - violation
-  - potentialviolation
-  - recommendation
-  - potentialrecommendation
-  - manual
+  # - potentialviolation
+  # - recommendation
+  # - potentialrecommendation
+  # - manual
 outputFormat:
   - json
 label:
