--- a/.github/workflows/ally_test.yml
+++ b/.github/workflows/ally_test.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Clear cache
+        run: rm -rf ~/.npm ~/.cache/pip node_modules     
       - name: Run first test file
         run: cypress run --browser chrome --env JDK_VERSION="1.8.0_311" --config-file /__w/Ally-docs/Ally-docs/cypress-docs/cypress.config.js --spec "/__w/Ally-docs/Ally-docs/cypress-docs/cypress/e2e/gha.cy.js"
       # - uses: actions/upload-artifact@v3
