--- a/.github/workflows/ally_testOL_api.yml
+++ b/.github/workflows/ally_testOL_api.yml
@@ -13,46 +13,25 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      # - name: Clear cache
-      #   run: rm -rf ~/.npm ~/.cache/pip node_modules   
+
+      # Run Cypress test
       - name: Run first test file
-        run: cypress run --browser chrome --env JDK_VERSION="1.8.0_311" --config-file /__w/Ally-docs/Ally-docs/cypress-docs/cypress.config.js --spec "/__w/Ally-docs/Ally-docs/cypress-docs/cypress/e2e/gha.cy.js"
-    #   - name: Wait for File Creation
-    #     run: |
-    #       while [ ! -f /__w/Ally-docs/Ally-docs/cypress-docs/results/summary.json ]; do
-    #         echo "Waiting for summary.json to be created..."
-    #         sleep 1
-    #       done
-    #       echo "summary.json is now available."  
-      # - name: Upload Compliance Results
-      #   if: success() 
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: ol_api_overview2
-      #     path: /__w/Ally-docs/Ally-docs/cypress-docs/results/OL_API/ol_api_overview2.json
-      #     if-no-files-found: warn
-      # - name: Upload Compliance Results
-      #   if: success() 
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: ol_api_package1
-      #     path: /__w/Ally-docs/Ally-docs/cypress-docs/results/OL_API/ol_api_package1.json
-      #     if-no-files-found: warn    
-      # - name: Upload Compliance Results
-      #   if: success() 
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #       name: ol_api_package2
-      #       path: /__w/Ally-docs/Ally-docs/cypress-docs/results/OL_API/ol_api_package2.json
-      #       if-no-files-found: warn    
+        run: cypress run --browser chrome --env JDK_VERSION="1.8.0_311" --config-file ${{ github.workspace }}/cypress-docs/cypress.config.js --spec "${{ github.workspace }}/cypress-docs/cypress/e2e/gha.cy.js"
+
+      # Debug: Verify all files after tests run
+      - name: Debug - List all files in workspace
+        run: ls -R ${{ github.workspace }}
+
+      # Debug: Check if summary files exist
+      - name: Debug - Check summary files
+        run: ls -R ${{ github.workspace }}/cypress-docs/results || echo "No summary files found!"
+
+      # Upload test summary files if they exist
       - name: Upload Summary Results
-        if: success() 
+        if: success()
         uses: actions/upload-artifact@v4
         with:
             name: Summary File
-            path: /__w/Ally-docs/Ally-docs/cypress-docs/results/summary*.json
+            path: ${{ github.workspace }}/cypress-docs/results/summary*.json
             if-no-files-found: warn      
             include-hidden-files: true  
-      - name: Debug - List files
-        run: ls -R ${{ github.workspace }}        
-  
