--- a/.github/workflows/ally_testOL_api.yml
+++ b/.github/workflows/ally_testOL_api.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v4
       # - name: Clear cache
       #   run: rm -rf ~/.npm ~/.cache/pip node_modules   
+      - name: Cleanup previous results  # Add this step
+        run: rm -rf /__w/Ally-docs/Ally-docs/cypress-docs/results/*
       - name: Run first test file
         run: cypress run --browser chrome --env JDK_VERSION="1.8.0_311" --config-file /__w/Ally-docs/Ally-docs/cypress-docs/cypress.config.js --spec "/__w/Ally-docs/Ally-docs/cypress-docs/cypress/e2e/gha.cy.js"
     #   - name: Wait for File Creation
