--- a/.github/workflows/blog_pr.yml
+++ b/.github/workflows/blog_pr.yml
@@ -6,6 +6,7 @@ on:
     branches:
       - staging
       - main
+  workflow_dispatch:    
 
 jobs:
   pull-request:
@@ -17,7 +18,7 @@ jobs:
     - name: pull-request
       uses: diillson/auto-pull-request@v1.0.1
       with:
-        source_branch: "GA"                                 # If "", default: triggered branch
+        source_branch: "GA*"                                 # If "", default: triggered branch
         destination_branch: "draft"                      # If blank, default: master
         pr_title: "Pulling ${{ github.ref }} into draft" # Title of pull request
         pr_body: "This is a sample PR"
