--- a/.github/workflows/blog_pr.yml
+++ b/.github/workflows/blog_pr.yml
@@ -9,7 +9,12 @@ on:
 
 jobs:
   create-pr:
-    if: github.event.pull_request.merged == true && github.event.pull_request.head.ref == 'GA'
+    if: |
+      github.event.pull_request.merged == true && 
+      (
+        startsWith(github.event.pull_request.head.ref, '25.') ||
+        endsWith(github.event.pull_request.head.ref, '-beta')
+      )  
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
@@ -19,7 +24,7 @@ jobs:
     - name: pull-request
       uses: diillson/auto-pull-request@v1.0.1
       with:
-        source_branch: "GA"                                 # If "", default: triggered branch
+        source_branch: "${{ github.event.pull_request.head.ref }}"                                 # If "", default: triggered branch
         destination_branch: "draft"                      # If blank, default: master
         pr_title: "Pulling ${{ github.ref }} into draft" # Title of pull request
         pr_body: "This is a sample PR"
