--- a/.github/workflows/blog_pr.yml
+++ b/.github/workflows/blog_pr.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         source_branch: "${{ github.event.pull_request.head.ref }}"                                 # If "", default: triggered branch
         destination_branch: "draft"                      # If blank, default: master
-        pr_title: "Pulling ${{ github.ref }} into draft" # Title of pull request
+        pr_title: "Pulling ${{ github.event.pull_request.head.ref }} updates into draft" # Title of pull request
         pr_body: "This is a sample PR"
         pr_label: "auto-pr"                               # Comma-separated list (no spaces)
         pr_draft: true                                    # Creates pull request as draft
