--- a/.github/workflows/blog_pr.yml
+++ b/.github/workflows/blog_pr.yml
@@ -17,10 +17,10 @@ jobs:
     - name: pull-request
       uses: diillson/auto-pull-request@v1.0.1
       with:
-        source_branch: "${{ github.event.pull_request.head.ref }}"                                 # If "", default: triggered branch
+        source_branch: "${{ github.ref_name }}"                                 # If "", default: triggered branch
         destination_branch: draft                      # If blank, default: master
-        pr_title: "Pulling ${{ github.event.pull_request.head.ref }} updates into draft" # Title of pull request
-        pr_body: "This PR is created as updates are made to release blog ${{ github.event.pull_request.head.ref }}"
+        pr_title: "Pulling ${{ github.ref_name }} updates into draft" # Title of pull request
+        pr_body: "This PR is created as updates are made to release blog ${{ github.ref_name }}"
         pr_label: "auto-pr"                               # Comma-separated list (no spaces)
         pr_draft: true                                    # Creates pull request as draft
         github_token: ${{ secrets.GITHUB_TOKEN }}      # If blank, default: secrets.GITHUB_TOKEN
