--- a/.github/workflows/rebase_status_check.yml
+++ b/.github/workflows/rebase_status_check.yml
@@ -1,10 +1,7 @@
 name: Status Check
 
 on:
-  workflow_run:
-    workflows: ["Rebase Check"]
-    types:
-      - completed
+  workflow_dispatch:
 
 jobs:
   check:
