--- a/.github/workflows/rebase_check.yml
+++ b/.github/workflows/rebase_check.yml
@@ -10,34 +10,67 @@ jobs:
   rebase-check:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout feature branch
+      - name: Checkout PR branch
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
-          fetch-depth: 0 # needed for rebase
+          fetch-depth: 0  # Fetch full history to allow rebase checks
 
-      - name: Set up Git
+      - name: Set variables
+        id: vars
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          echo "BASE_BRANCH=${{ github.event.pull_request.base.ref }}" >> $GITHUB_ENV
+          echo "FEATURE_BRANCH=${{ github.event.pull_request.head.ref }}" >> $GITHUB_ENV
+          echo "REPO_OWNER=${{ github.repository_owner }}" >> $GITHUB_ENV
+          echo "REPO_NAME=${{ github.event.repository.name }}" >> $GITHUB_ENV
 
-      - name: Fetch target branch
-        run: git fetch origin ${{ github.base_ref }}
+      - name: Post comparison link if base is staging or main
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const base = process.env.BASE_BRANCH;
+            const head = process.env.FEATURE_BRANCH;
 
-      - name: Attempt rebase onto target branch
+            if (base === 'staging' || base === 'main') {
+              const compareUrl = `https://github.com/OpenLiberty/openliberty.io/compare/${base}..${head}`;
+              await github.rest.issues.createComment({
+                owner: OpenLiberty,
+                repo: openliberty.io,
+                issue_number: context.payload.pull_request.number,
+                body: `**Compare your changes here:**\n${compareUrl}\nEnsure the changes are identical to the desired changes. If not, please rebase ${head} onto ${base}`
+              });
+            }
+
+      - name: Check if PR can be rebased cleanly
+        id: rebase-check
         run: |
-          git rebase origin/${{ github.base_ref }}
-
-      - name: Check for rebase conflicts
-        run: |
-          if [ -d ".git/rebase-merge" ] || [ -d ".git/rebase-apply" ]; then
-            echo "Rebase conflicts detected. Please rebase manually."
-            exit 1
+          git fetch origin $BASE_BRANCH
+          if git rebase --no-commit --no-ff origin/$BASE_BRANCH; then
+            echo "REBASE_POSSIBLE=true" >> $GITHUB_ENV
+            git rebase --abort
+          else
+            echo "REBASE_POSSIBLE=false" >> $GITHUB_ENV
+            git rebase --abort
           fi
 
-      - name: Push rebased branch (optional)
-        if: success()
-        run: git push --force-with-lease origin HEAD:${{ github.head_ref }}
+      - name: Comment rebase possibility
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const rebasePossible = process.env.REBASE_POSSIBLE;
+            const owner = process.env.REPO_OWNER;
+            const repo = process.env.REPO_NAME;
+            const prNumber = context.payload.pull_request.number;
 
-      - name: Force exit success
-        run: exit 0  
+            let msg = '';
+            if (rebasePossible === 'true') {
+              msg = 'This PR can be rebased cleanly onto its base branch.';
+            } else {
+              msg = 'This PR **cannot** be rebased cleanly. Please resolve conflicts.';
+            }
+
+            await github.rest.issues.createComment({
+              owner: OpenLiberty,
+              repo: openliberty.io,
+              issue_number: prNumber,
+              body: msg
+            });
