--- a/.github/workflows/rebase_check.yml
+++ b/.github/workflows/rebase_check.yml
@@ -31,7 +31,7 @@ jobs:
             if (base === 'staging' || base === 'main') {
               const compareUrl = `https://github.com/navaneethsnair1/Ally-docs/compare/${base}..${head}`;
               await github.rest.issues.createComment({
-                owner: context.repo.owner 
+                owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: context.payload.pull_request.number,
                 body: `**Compare your changes here:**\n${compareUrl}\nEnsure the changes are identical to the desired changes. If not, please rebase ${head} onto ${base}`
