--- a/.github/workflows/rebase_check.yml
+++ b/.github/workflows/rebase_check.yml
@@ -20,8 +20,6 @@ jobs:
         run: |
           echo "BASE_BRANCH=${{ github.event.pull_request.base.ref }}" >> $GITHUB_ENV
           echo "FEATURE_BRANCH=${{ github.event.pull_request.head.ref }}" >> $GITHUB_ENV
-          echo "REPO_OWNER=${{ github.repository_owner }}" >> $GITHUB_ENV
-          echo "REPO_NAME=${{ github.event.repository.name }}" >> $GITHUB_ENV
 
       - name: Post comparison link if base is staging or main
         uses: actions/github-script@v7
@@ -31,10 +29,10 @@ jobs:
             const head = process.env.FEATURE_BRANCH;
 
             if (base === 'staging' || base === 'main') {
-              const compareUrl = `https://github.com/OpenLiberty/openliberty.io/compare/${base}..${head}`;
+              const compareUrl = `https://github.com/navaneethsnair1/Ally-docs/compare/${base}..${head}`;
               await github.rest.issues.createComment({
-                owner: OpenLiberty,
-                repo: openliberty.io,
+                owner: context.repo.owner,
+                repo: 'Ally-docs',
                 issue_number: context.payload.pull_request.number,
                 body: `**Compare your changes here:**\n${compareUrl}\nEnsure the changes are identical to the desired changes. If not, please rebase ${head} onto ${base}`
               });
@@ -57,8 +55,6 @@ jobs:
         with:
           script: |
             const rebasePossible = process.env.REBASE_POSSIBLE;
-            const owner = process.env.REPO_OWNER;
-            const repo = process.env.REPO_NAME;
             const prNumber = context.payload.pull_request.number;
 
             let msg = '';
@@ -69,8 +65,9 @@ jobs:
             }
 
             await github.rest.issues.createComment({
-              owner: OpenLiberty,
-              repo: openliberty.io,
+              owner: context.repo.owner ,
+              repo: 'Ally-docs', 
               issue_number: prNumber,
               body: msg
             });
+
