--- a/.github/workflows/rebase_check.yml
+++ b/.github/workflows/rebase_check.yml
@@ -38,6 +38,11 @@ jobs:
               });
             }
 
+      - name: Set up Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"         
+
       - name: Check if PR can be rebased cleanly
         id: rebase-check
         run: |
