--- a/.github/workflows/rebase_check.yml
+++ b/.github/workflows/rebase_check.yml
@@ -2,7 +2,6 @@ name: Rebase Check
 
 on:
   pull_request:
-    types: [opened]
     branches:
       - staging
       - draft
@@ -11,27 +10,19 @@ jobs:
   rebase-check:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout PR branch
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  
-      - name: Set variables
-        id: vars
-        run: |
-          echo "BASE_BRANCH=${{ github.event.pull_request.base.ref }}" >> $GITHUB_ENV
-          echo "FEATURE_BRANCH=${{ github.event.pull_request.head.ref }}" >> $GITHUB_ENV
       - name: Post '..' comparison link to verify changes are identical to normal comparison
         uses: actions/github-script@v7
         with:
           script: |
-            const base = process.env.BASE_BRANCH;
-            const head = process.env.FEATURE_BRANCH;
-            if (base === 'staging' || base === 'main') {
-              const compareUrl = `https://github.com/navaneethsnair1/Ally-docs/compare/${base}..${head}`;
-              await github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: 'Ally-docs',
-                issue_number: context.payload.pull_request.number,
-                body: `**Compare your changes here:**\n${compareUrl}\nEnsure the changes are identical to the desired changes. If not, please rebase '${head}' onto '${base}'`
-              });
-            }
+            const compareUrl = `https://github.com/navaneethsnair1/Ally-docs/compare/${{ github.base_ref }}..${{ github.head_ref }}`;
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: 'Ally-docs',
+              issue_number: context.payload.pull_request.number,
+              body: |
+            **Compare your changes here:**\n${compareUrl}
+
+            Ensure the changes are identical to the desired changes. 
+            If not, please resolve merge conflicts (if any) and rebase '${{ github.head_ref }}' onto '${{ github.base_ref }}'`
+            });
+
