--- a/.github/workflows/rebase_check.yml
+++ b/.github/workflows/rebase_check.yml
@@ -21,8 +21,8 @@ jobs:
               issue_number: context.payload.pull_request.number,
               body: |
                 **Compare your changes here:**\n${compareUrl}
-    
+
                 Ensure the changes are identical to the desired changes. 
-                If not, please resolve merge conflicts (if any) and rebase '${{ github.head_ref }}' onto '${{ github.base_ref }}'`
+                If not, please resolve merge conflicts (if any) and rebase '${{ github.head_ref }}' onto '${{ github.base_ref }}'
             });
 
