--- a/.github/workflows/rebase_check.yml
+++ b/.github/workflows/rebase_check.yml
@@ -10,6 +10,23 @@ jobs:
   rebase-check:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          
+      - name: Define output paragraph
+        run: |
+          SCRIPT_OUTPUT=$(cat << EOF
+          **Compare your changes here:**\n${compareUrl}
+
+          Ensure the changes are identical to the desired changes. 
+          If not, please resolve merge conflicts (if any) and rebase '${{ github.head_ref }}' onto '${{ github.base_ref }}'
+          EOF
+          )
+          echo "SCRIPT_OUTPUT<<EOF" >> $GITHUB_ENV
+          echo "$SCRIPT_OUTPUT" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+      
       - name: Post '..' comparison link to verify changes are identical to normal comparison
         uses: actions/github-script@v7
         with:
@@ -19,10 +36,6 @@ jobs:
               owner: context.repo.owner,
               repo: 'Ally-docs',
               issue_number: context.payload.pull_request.number,
-              body: |
-                **Compare your changes here:**\n${compareUrl}
-
-                Ensure the changes are identical to the desired changes. 
-                If not, please resolve merge conflicts (if any) and rebase '${{ github.head_ref }}' onto '${{ github.base_ref }}'
+              body: ${{env.SCRIPT_OUTPUT}}
             });
 
